objects/CigaretteModule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cigarette_Code__c</fullName>
        <label>Cigarette Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLineCode__c</fullName>
        <label>ProductLineCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CigaretteModule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cigarette_Code__c</columns>
        <columns>ProductLineCode__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM{0000}</displayFormat>
        <label>CigaretteModule Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CigaretteModules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>